# cookiebreaks

./: .gitignore  README.md  config.blank.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  log.txt  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
api/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  config.blank.yml  mypy.ini  pyproject.toml  services.yaml
api/scripts/: gen_mailctl_config.py  gen_msmtprc.py  get_token.py  gpg.sh
api/src/: api.py  cb  compose.py  database.py  event.py  interactive.py  main.py  structs.py
api/src/cookiebreaks/api/: main.py
api/src/cookiebreaks/api/routers/: breaks.py  claims.py  data.py  debug.py  settings.py  users.py  utils.py
api/src/cookiebreaks/cli/: interactive.py  main.py
api/src/cookiebreaks/core/: cb  compose.py  config.py  database.py  env.py  event.py  structs.py
api/src/cookiebreaks/tasks/: announce.py  claim.py  holiday.py  host.py  reimburse.py  success.py  update.py
api/src/cookiebreaks/templates/: announce.txt
api/src/routers/: breaks.py  claims.py  debug.py  users.py  utils.py
api/src/tasks/: announce.py  claim.py  holiday.py  host.py  reimburse.py  success.py  update.py
api/src/templates/: announce.txt
client/: .gitignore  Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/src/app/: admin.tsx  api.ts  bar.tsx  breaks.tsx  cards.tsx  claims.tsx  icons.tsx  layout.tsx  loader.tsx  login.tsx  page.tsx  structs.ts
client/src/app/cards/: awaiting.tsx  breaks.tsx  buttons.tsx  cards.tsx  claimed.tsx  claims.tsx  completion.tsx  reimbursed.tsx  upcoming.tsx  (+1 more)
db/: init.sql
src/: announce.py  api.py  claim.py  compose.py  config.py  database.py  event.py  holiday.py  host.py  interactive.py  main.py  new.py  next.py  reimburse.py  reimburse_admin.py  reimburse_host.py  structs.py
src/tasks/: announce.py  claim.py  holiday.py  host.py  next.py  reimburse.py  success.py  update.py
src/templates/: announce.txt
updater/: Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml
updater/src/updater/: main.py
(+2 files in other folders)
