[tool.poetry]
name = "cookiebreak-scripts"
version = "1.0.0"
description = "Suite for managing the cookie break"
authors = ["George Kaye <georgejkaye@gmail.com>"]
license = "GPL-v3.0-or-later"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
types-PyYAML = "^6.0.12.10"
psycopg-binary = "^3.1.9"
arrow = "^1.2.3"
icalendar = "^5.0.7"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
