[tool.poetry]
name = "updater"
version = "0.1.0"
description = ""
authors = ["George Kaye <georgejkaye@gmail.com>"]
readme = "README.md"
packages = [{include = "updater", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.1"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
